[B]Retrospect v5.4.0+matrix.1 - Changelog - 2021-05-15[/B]

This update fixes some channel issues and contains a simplification in the 'playing back of items' code that was long over due.

[B]Framework related[/B]
* Removed: Custom YT code and force YT add-on.

[B]GUI/Settings/Language related[/B]
* Updated: Settings for Up Next integration.

[B]Channel related[/B]
* Fixed: NPO Listing had some "folder-icon" issues (Fixes #1516).
* Fixed: KetNet broke due to API changes (Fixes #1517).