@@ -4,9 +4,9 @@
 import pytz
 import datetime
 
-from resources.lib import chn_class, mediatype
+from resources.lib import chn_class, mediatype, contenttype
 from resources.lib.helpers.datehelper import DateHelper
-from resources.lib.mediaitem import MediaItem
+from resources.lib.mediaitem import MediaItem, FolderItem
 from resources.lib.addonsettings import AddonSettings
 from resources.lib.helpers.jsonhelper import JsonHelper
 
@@ -85,6 +85,7 @@ class Channel(chn_class.Channel):
 
         self._add_data_parser("https://graphql.tv4play.se/graphql?query=%7BvideoPanel%28id%3A",
                               name="GraphQL single season/folder listing", json=True,
+                              postprocessor=self.add_next_page,
                               parser=["data", "videoPanel", "videoList", "videoAssets"],
                               creator=self.create_api_video_asset_type)
 
@@ -347,6 +348,8 @@ class Channel(chn_class.Channel):
         folder_id = result_set["id"]
         url = self.__get_api_folder_url(folder_id)
         item = MediaItem(title, url)
+        item.metaData["offset"] = 0
+        item.metaData["folder_id"] = folder_id
         return item
 
     def create_api_swipefolder_type(self, result_set):
@@ -502,6 +505,44 @@ class Channel(chn_class.Channel):
         json_data = JsonHelper(data)
         json_data.json["pageProps"]["initialApolloState"] = list(json_data.json["pageProps"]["initialApolloState"].values())
         return json_data, []
+
+    def add_next_page(self, data, items):
+        """ Performs post-process actions for data processing.
+
+        Accepts an data from the process_folder_list method, BEFORE the items are
+        processed. Allows setting of parameters (like title etc) for the channel.
+        Inside this method the <data> could be changed and additional items can
+        be created.
+
+        The return values should always be instantiated in at least ("", []).
+
+        :param str|JsonHelper data:     The retrieve data that was loaded for the
+                                         current item and URL.
+        :param list[MediaItem] items:   The currently available items
+
+        :return: A tuple of the data and a list of MediaItems that were generated.
+        :rtype: list[MediaItem]
+
+        """
+
+        Logger.info("Performing Post-Processing")
+
+        total_hits = data.get_value('data', 'videoPanel', 'videoList', 'totalHits')
+        if total_hits > len(items):
+            Logger.debug("Adding 'more' pages")
+            offset = self.parentItem.metaData.get("offset", 0) + 100
+            folder_id = self.parentItem.metaData.get("folder_id")
+            if not folder_id:
+                Logger.warning("Cannot find 'folder_id' in MediaItem")
+                return items
+            url = self.__get_api_folder_url(folder_id, offset)
+            title = LanguageHelper.get_localized_string(LanguageHelper.MorePages)
+            item = FolderItem(title, url, content_type=contenttype.EPISODES, media_type=mediatype.PAGE)
+            item.metaData["offset"] = offset
+            items.append(item)
+
+        Logger.debug("Post-Processing finished")
+        return items
 
     def detect_single_folder(self, data):
         """ Performs pre-process actions and detect single folder items
@@ -775,11 +816,11 @@ class Channel(chn_class.Channel):
     def __get_api_query(self, query):
         return "https://graphql.tv4play.se/graphql?query={}".format(HtmlEntityHelper.url_encode(query))
 
-    def __get_api_folder_url(self, folder_id):
+    def __get_api_folder_url(self, folder_id, offset=0):
         return self.__get_api_query(
-            '{videoPanel(id: "%s"){name,videoList(limit: 100){totalHits,videoAssets'
+            '{videoPanel(id: "%s"){name,videoList(limit: 100, offset:%d){totalHits,videoAssets'
             '{title,id,description,season,episode,daysLeftInService,broadcastDateTime,image,'
-            'freemium,drmProtected,live,duration}}}}' % (folder_id,))
+            'freemium,drmProtected,live,duration}}}}' % (folder_id, offset))
 
     def __update_dash_video(self, item, stream_info):
         """
